framec/tests/snapshots/javascript_snapshots__forward.snap
---
source: framec/tests/javascript_snapshots.rs
expression: "compile_fixture(\"07_forward\", \"javascript\")"
---
export class ForwardFrameEvent {
    _message;
    _parameters;

    constructor(message, parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}


export class ForwardFrameContext {
    event;
    _return;
    _data;
    _transitioned;

    constructor(event, default_return) {
        this.event = event;
        this._return = default_return;
        this._data = {  };
        this._transitioned = false;
    }
}


export class ForwardCompartment {
    state;
    state_args;
    state_vars;
    enter_args;
    exit_args;
    forward_event;
    parent_compartment;

    constructor(state, parent_compartment = null) {
        this.state = state;
        this.state_args = [];
        this.state_vars = {  };
        this.enter_args = [];
        this.exit_args = [];
        this.forward_event = null;
        this.parent_compartment = parent_compartment;
    }

    copy() {
        const c = new ForwardCompartment(this.state, this.parent_compartment);
        c.state_args = {...this.state_args};
        c.state_vars = {...this.state_vars};
        c.enter_args = {...this.enter_args};
        c.exit_args = {...this.exit_args};
        c.forward_event = this.forward_event;
        return c;
    }
}


export class Forward {
    _state_stack;
    __compartment;
    __next_compartment;
    _context_stack;
    starts = 0;
    middles = 0;

    constructor() {
        this._state_stack = [];
        this._context_stack = [];
        this.__compartment = this.__prepareEnter("Start", [], []);
        this.__next_compartment = null;
    }

    _frame_init() {
        const __e = new ForwardFrameEvent("$>", this.__compartment.enter_args);
        const __ctx = new ForwardFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        this._context_stack.pop();
    }

    static _create() {
        const c = new Forward();
        c._frame_init();
        return c;
    }

    static _HSM_CHAIN = {
        "Start": ["Start"],
        "Middle": ["Middle"],
        "End": ["End"],
    };
    __prepareEnter(leaf, state_args, enter_args) {
        let comp = null;
        for (const name of Forward._HSM_CHAIN[leaf]) {
            const new_comp = new ForwardCompartment(name);
            new_comp.state_args = [...state_args];
            new_comp.enter_args = [...enter_args];
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp;
    }

    __prepareExit(exit_args) {
        let comp = this.__compartment;
        while (comp !== null) {
            comp.exit_args = [...exit_args];
            comp = comp.parent_compartment;
        }
    }

    __kernel(__e) {
        // Route event to current state.
        this.__router(__e);
        // Drain any transitions queued by the handler.
        while (this.__next_compartment !== null) {
            const next_compartment = this.__next_compartment;
            this.__next_compartment = null;
            // Exit the current (leaf) state.
            const exit_event = new ForwardFrameEvent("<$", this.__compartment.exit_args);
            this.__router(exit_event);
            // Switch to the new compartment.
            this.__compartment = next_compartment;
            // Three-branch forward-event handling.
            const forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event === null) {
                // No forwarded event — synthesize a fresh $>.
                const enter_event = new ForwardFrameEvent("$>", this.__compartment.enter_args);
                this.__router(enter_event);
            } else if (forward_event._message === "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                this.__router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                const enter_event = new ForwardFrameEvent("$>", this.__compartment.enter_args);
                this.__router(enter_event);
                this.__router(forward_event);
            }
            for (const ctx of this._context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    __router(__e) {
        const handler_name = `_state_${this.__compartment.state}`;
        const handler = this[handler_name];
        if (handler) {
            handler.call(this, __e, this.__compartment);
        }
    }

    __transition(next_compartment) {
        this.__next_compartment = next_compartment;
    }

    run() {
        const __e = new ForwardFrameEvent("run", []);
        const __ctx = new ForwardFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        return this._context_stack.pop()._return;
    }

    finish() {
        const __e = new ForwardFrameEvent("finish", []);
        const __ctx = new ForwardFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        return this._context_stack.pop()._return;
    }

    _state_Start(__e, compartment) {
        if (__e._message === "run") {
            this._s_Start_hdl_user_run(__e, compartment);
            return;
        }
    }

    _state_Middle(__e, compartment) {
        if (__e._message === "finish") {
            this._s_Middle_hdl_user_finish(__e, compartment);
            return;
        }
        if (__e._message === "run") {
            this._s_Middle_hdl_user_run(__e, compartment);
            return;
        }
    }

    _state_End(__e, compartment) {
        if (__e._message === "finish") {
            this._s_End_hdl_user_finish(__e, compartment);
            return;
        }
    }

    _s_Start_hdl_user_run(__e, compartment) {
        self.starts = self.starts + 1
        const __compartment = this.__prepareEnter("Middle", [], []);
        __compartment.forward_event = __e;
        this.__transition(__compartment);
        return;
    }

    _s_Middle_hdl_user_finish(__e, compartment) {
        const __compartment = this.__prepareEnter("End", [], []);
        this.__transition(__compartment);
        return;
    }

    _s_Middle_hdl_user_run(__e, compartment) {
        self.middles = self.middles + 1
    }

    _s_End_hdl_user_finish(__e, compartment) {

    }
}
